--- a/homework/homework_9/src/main/resources/templates/createClient.html
+++ b/homework/homework_9/src/main/resources/templates/createClient.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Create client</title>
@@ -12,12 +12,12 @@
         <div class="row">
             <!--<form action="/books/add" method="post">-->
             <form action="/client/create" method="post">
-                <div class="form-group">
+                <div class="form-group" th:object=${person}>
                     <label for="name">Name:</label>
                     <input id="name" name="Name" type="text" class="form-control" placeholder="Favorite client" required/>
-                </div>
+                <!--</div>-->
                 <h5>Enter birthday:</h5>
-                <div class="form-group">
+                <!--<div class="form-group">-->
                     <label for="day-input">Day:</label>
                     <input id="day-input" name="day" type="number" class="form-control" value=1 required/>
                     <label for="month-input">Month:</label>
@@ -25,7 +25,7 @@
                     <label for="year-input">Year:</label>
                     <input id="year-input" name="year" type="number" class="form-control" value=1980 required/>
                 </div>
-                <div class="form-group">
+                <div class="form-group" th:object=${client}>
                     <label for="address">Address:</label>
                     <input id="address" name="address" type="text" class="form-control" placeholder="City, street..." required/>
                     <label for="phone">Phone:</label>
