--- a/homework/homework_9/src/main/resources/templates/welcomePage.html
+++ b/homework/homework_9/src/main/resources/templates/welcomePage.html
@@ -8,5 +8,6 @@
     <a th:href="clients">Clients</a><br>
     <a th:href="ingredients">Ingredients</a><br>
     <a th:href="clients">Orders</a><br>
+    <a th:href="pizzas">Pizzas menu</a><br>
 </body>
 </html>
