--- a/homework/homework_9/src/main/resources/templates/clients.html
+++ b/homework/homework_9/src/main/resources/templates/clients.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Create client</title>
+    <title>Clients</title>
 </head>
 <body>
     <h2>Clients</h2>
