--- a/homework/homework_10/src/main/resources/templates/clients.html
+++ b/homework/homework_10/src/main/resources/templates/clients.html
@@ -65,19 +65,6 @@
 <a th:href="createClient">New client</a><br>
 <a th:href="welcomePage">Welcome page</a>
 <script>
-//    function submit() {
-//        var client_id = $('#client_id').text();
-//        console.log(client_id);
-//        $.ajax({
-//            type: 'DELETE',
-//            url: '/client/delete',
-//            data: {client_id: client_id},
-//            success: function(data) {
-//                $('tbody').html('');
-//                draw(data);
-//            }
-//        });
-//    }
 
     function draw(data) {
         data.forEach(function (data) {
@@ -109,7 +96,11 @@
 
     function edit(client) {
         var url = "/updateClient?id=" + client;
+        $(location).attr('href',url);
+    }
 
+    function create() {
+        var url = "/client/create";
         $(location).attr('href',url);
     }
 </script>
