--- a/homework/homework_10/src/main/resources/templates/createClient.html
+++ b/homework/homework_10/src/main/resources/templates/createClient.html
@@ -1,40 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Edit client</title>
-        body {
-            padding: 50px;
-        }
-
-        .client, .client td {
-            border: 1px solid lightgray;
-            padding: 5px;
-        }
+    <title>Add new client</title>
     <script src="webjars/jquery/3.3.1/jquery.min.js"></script>
-    <script>
-        $(function () {
-            var id = getId()[1];
-            $.get('/client?id='+id).done(function (client) {
-                $("#name").val(client.person.name);
-                $("#day-input").val(client.person.day);
-                $("#month-input").val(client.person.month);
-                $("#year-input").val(client.person.year);
-                $("#address").val(client.address);
-                $("#phone").val(client.phone);
-                $("#email").val(client.email);
-                $("#comment").val(client.comment);
-                $("#id").val(client.id);
-            })
-        });
-        function getId() {
-            return window.location.href.slice(window.location.href.indexOf('?')).split(/[&?]{1}[\w\d]+=/);
-        }
-    </script>
 </head>
 <body>
-<h2>Update client</h2>
-<label>(fill all fields please)</label>
+    <h2>Update client</h2>
+    <label>(fill all fields please)</label>
     <div class="client">
         <label for="name">Name:</label>
         <input id="name" name="Name" type="text" size="40" class="client" required/><br><br>
@@ -53,21 +26,18 @@
         <input id="email" name="email" type="text" size="28" class="client"/><br><br>
         <label for="comment">Comment:</label>
         <input id="comment" name="comment" type="text" size="55" class="client"/><br>
-        <label for="id">Id:</label>
-        <input id="id" name="id" type="text" size="1" readonly/>
         <br>
-        <button onclick="update()">Update</button>
-        <br><br><br>
-        <button onclick="del()">Remove this client</button>
+        <button onclick="create()">Create client</button>
     </div>
-    <a href="welcomePage">Welcome page</a>
+    <br>
+    <a th:href="welcomePage">Welcome page</a>
     <script>
-        function update() {
+        function create() {
             var cacheClient = getClient();
             var cachePerson = getPerson();
 
-            $.ajax('/client/update', {
-                method: 'PUT',
+            $.ajax('/client/create', {
+                method: 'POST',
                 data: JSON.stringify({clientDto: cacheClient, personDto : cachePerson}),
                 contentType: 'application/json',
                 dataType: 'json',
@@ -87,19 +57,6 @@
         function getPerson() {
             var cachePerson = {name : $("#name").val(), day : $("#day-input").val(), month : $("#month-input").val(), year : $("#year-input").val()};
             return cachePerson;
-        }
-
-        function del() {
-            var client_id = $('#id').val();
-            $.ajax({
-                type: 'DELETE',
-                url: '/client/delete',
-                data: {client_id: client_id},
-                success: function(data) {
-                    var url = "/clients";
-                    $(location).attr('href',url);
-                }
-            });
         }
     </script>
 </body>
