--- a/homework/homework_10/src/main/resources/templates/pizzas.html
+++ b/homework/homework_10/src/main/resources/templates/pizzas.html
@@ -21,16 +21,13 @@
             pizzas.forEach(function (pizza) {
                 $('tbody').append(`
                     <tr>
-                        <td id="pizza_id">${pizza.id}</td>
+                        <td>${pizza.id}</td>
                         <td>${pizza.name}</td>
                         <td>
-                            <button onclick="getRecipePage();">Recipe</button>
+                            <button onclick="getRecipePage('${pizza.id}');">Recipe</button>
                         </td>
                         <td>
-                            <button onclick="editPizzaPage();">Edit</button>
-                        </td>
-                        <td>
-                            <button onclick="submit();">Delete</button>
+                            <button onclick="del('${pizza.id}');">Delete</button>
                         </td>
                     </tr>
                 `)
@@ -56,8 +53,8 @@
     <a th:href="newIngredient">New ingredient</a><br>
     <a th:href="welcomePage">Welcome page</a>
 <script>
-    function submit() {
-        var pizza_id = $('#pizza_id').text();
+    function del(pizza) {
+        var pizza_id = pizza;
         console.log(pizza_id);
         $.ajax({
             type: 'DELETE',
@@ -74,29 +71,24 @@
         data.forEach(function (data) {
             $('tbody').append(`
                 <tr>
-                    <td id="id">${data.id}</td>
+                    <td>${data.id}</td>
                     <td>${data.name}</td>
                     <td>
-                        <button onclick="getRecipePage();">Recipe</button>
+                        <button onclick="getRecipePage('${data.id}');">Recipe</button>
                     </td>
                     <td>
                         <button onclick="editPizzaPage();">Edit</button>
                     </td>
                     <td>
-                        <button onclick="submit();">Delete</button>
+                        <button onclick="del('${data.id}');">Delete</button>
                     </td>
                 </tr>
             `)
         });
     }
 
-    function editPizzaPage() {
-        var url = "/";
-        $(location).attr('href',url);
-    }
-
-    function getRecipePage() {
-        var url = "/";
+    function getRecipePage(id) {
+        var url = "/recipe?id=" + id;
         $(location).attr('href',url);
     }
 </script>
