--- a/homework/homework_10/src/main/resources/templates/pizzas.html
+++ b/homework/homework_10/src/main/resources/templates/pizzas.html
@@ -50,7 +50,7 @@
     </table>
     <br>
     <br>
-    <a th:href="newIngredient">New ingredient</a><br>
+    <a th:href="newIngredient">New pizza</a><br>
     <a th:href="welcomePage">Welcome page</a>
 <script>
     function del(pizza) {
