--- a/homework/homework_10/src/main/resources/templates/editClient.html
+++ b/homework/homework_10/src/main/resources/templates/editClient.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit client</title>
+    <style type="text/css">
         body {
             padding: 50px;
         }
 
-        .client, .client td {
+        .recipe, .recipe td {
             border: 1px solid lightgray;
             padding: 5px;
         }
+    </style>
     <script src="webjars/jquery/3.3.1/jquery.min.js"></script>
     <script>
         $(function () {
